fix title alignment

--- a/themes/aura/styles/thankyou.scss
+++ b/themes/aura/styles/thankyou.scss
@@ -150,15 +150,19 @@
         border-bottom: 1px solid #EBEBEB;
 
         >* {
-          text-align: start;
+          text-align: var(--yc-theme-direction);
           color: #a7a7a7;
           font-weight: 500;
           font-size: 14px;
           padding: 0 0 12px;
         }
 
-        >.total {
-          text-align: end;
+        [dir='rtl'] & >.total {
+          text-align: left;
+        }
+
+        [dir='ltr'] & >.total {
+          text-align: right;
         }
       }
 
@@ -176,11 +180,16 @@
         }
 
         >* {
+          text-align: var(--yc-theme-direction);
           padding: 8px 0;
         }
 
-        >.total {
-          text-align: end;
+        [dir='rtl'] & >.total {
+          text-align: left;
+        }
+
+        [dir='ltr'] & >.total {
+          text-align: right;
         }
       }
     }
